--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 MySQL-python==1.2.3
 PAM==0.4.2
+Pattern==2.6
 Pillow==2.6.1
 PyYAML==3.11
 Theano==0.7.0
@@ -35,7 +36,7 @@ lxml==3.3.6
 matplotlib==1.3.1
 mod-wsgi==4.5.14
 mod-wsgi-httpd==2.4.23.2
-nltk==3.2.2
+nltk==3.2.1
 nose==1.3.4
 numexpr==2.4
 numpy==1.8.2
